2010-05-21  Jedrzej Nowacki  <jedrzej.nowacki@nokia.com>

Reviewed by Darin Fisher.

        Fix the HistoryController::pushState.

        It should be possible to call the pushState method from
        the first page in a window.

        history.pushState doesn't work for the first page in a window.
        https://bugs.webkit.org/show_bug.cgi?id=39418

        * loader/HistoryController.cpp:
        (WebCore::HistoryController::pushState):

Canonical link: https://commits.webkit.org/51026@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59933 268f45cc-cd09-0410-ab3c-d52691b4dbfc